# xt_simulation

./: CMakeLists.txt  run.sh
crt_simulation/app/: CMakeLists.txt  GainSaturation.cxx
gasfile/: He_90.0000_iC4H10_10.0000_H2O_0.0000_1.000000atmB0.gas  He_90_iC4H10_10_760Torr_293.15K_10emin_to_500000emax.gas
geofile/: prototypeGeo_9anode.root
root/: output_2.root
src/: xt_simulation.cxx  xt_simulation.hxx
